fix(header): resolves layout issue

--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -113,7 +113,10 @@ $header-border-size: 1px;
         display: none;
       }
 
-      .header__link,
+      .header__link {
+        display: flex;
+      }
+
       nav,
       .header__language-switch {
         display: block;
